[tool.poetry]
name = "lang-graph"
version = "0.1.0"
description = ""
authors = ["ahmed <ahm_ed5722@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12.10,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
python-dotenv = ">=1.1.0,<2.0.0"
torch = { version = "2.3.0+cpu", source = "pytorch-cpu" }
sentence-transformers = "^2.2.0"
pre-commit = "^4.2.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
